<resources>
    <string name="app_name">Hands Up</string>

    <!-- strings for ClassRoom -->
    <string name="Building_Name">Building Name</string>
    <string name="Building_Number">Building Number</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="commit">Commit</string>

    <!-- strings for CourseSelection -->
    <string name="ProfFistName">Prof\'s First Name</string>
    <string name="ProfLastName">Prof\'s Last Name</string>
    <string name="StudentID">Student\'s ID</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="daysOfWeek">Days Of the Week</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="courseId">Course ID</string>
    <string name="numStudents"># of Students</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">email</string>
    <string name="authorization">Authorization</string>
    <string name="radius">Radius</string>

    <!-- strings for LoginActivity -->
    <string name="login">Login</string>
    <string name="emailMessage">Please enter your email address.</string>
    <string name="register">Register for Course</string>
    <string name="attendanceButton">Course Attendance</string>
    <string name="userID">User ID</string>
    <string name="database">Please Choose Database\nEntry Type</string>
    <string name="registerStudentTtl">Registration</string>
    <string name="registerStudent">Register</string>
    <string name="attendanceStudent">Attendance</string>
    <string name="checkAttendance">Check Attendance</string>
    <string name="date">MM/DD/YYYY</string>
    <string name="attendancedate">Day of Attendance</string>
    <string name="stdntEmail">Student Email Address</string>
    <string name="Student">Student</string>

    <!-- strings for AboutActivity -->
    <string name="aboutInfo">\n\n\n

        <font size="20">
            <u>
                <b>About Hands Up</b>
            </u>
        </font>
        \n\n
        \t\tHands Up is a university attendance application that keeps track of a student’s attendance in a course via
        a smart phone.\n\n\t\tThe application automates the manual process of a professor who has to take attendance of
        the students in the course. It provides a solution that will use the location of students\' phones to determine
        whether or not they are in class, and it also allows the professors to query these results to determine if a
        student was present or not. A student’s attendance is determined by the phone’s proximity to the specified room
        as harvested by an alarm listener and global position.\n\n


        <font size="20">\n
            <u>
                <b>Development Team</b>
            </u>
        </font>
        \n\n
        <b>Allia Richardson</b>\n\t • Database Programmer\n\t • User Interface Designer\n\t • General Program Flow
        Designer\n
        <b>Zachary Johnson</b>\n\t • Location and Alarm Systems\n
        <b>Ryan Bailey</b>\n\t • Location and Alarm Systems\n
        <b>Jesse Cimon</b>\n\t • Concepts\n\t • Code Integration Manager\n
        <b>Malcolm Zoon</b>\n\t • Concepts\n\t • Debugger
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back">Back</string>
    <string name="about">About</string>
    <string name="createAttendacne">Create Attendance Sheet</string>
    <string name="create">Create</string>
    <string name="createList">Create Attendance List</string>
    <string name="time">HH:MM</string>
</resources>