<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/lightYellow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">
    <RelativeLayout
            android:id="@+id/rLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:layout_editor_absoluteY="-26dp"
            tools:layout_editor_absoluteX="0dp">
        <TextView
                android:id="@+id/errorText"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:layout_width="346dp"
                android:layout_height="212dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_above="@+id/emailTxt" android:layout_marginBottom="9dp" android:layout_marginTop="92dp"
                android:layout_alignParentTop="true"/>
        <TextView
                android:id="@+id/emailTxt"
                android:layout_width="367dp"
                android:layout_height="48dp"
                android:text="@string/emailMessage"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/errorText" android:layout_marginStart="19dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.402"
                android:layout_above="@+id/emailInput" android:layout_marginBottom="-9dp"/>
        <EditText
                android:id="@+id/emailInput"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:background="@drawable/roundededittext"
                android:padding="5dp"
                android:hint="@string/email"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                app:layout_constraintTop_toBottomOf="@+id/emailTxt" android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="49dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/loginButton" app:layout_constraintVertical_bias="0.0"
                app:layout_constraintHorizontal_bias="0.416"
                android:layout_above="@+id/loginButton"
                android:layout_marginBottom="38dp"/>
        <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/ring"
                android:textSize="20sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="104dp" app:layout_constraintStart_toStartOf="@+id/emailTxt"
                android:layout_marginEnd="105dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="186dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.342"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>