<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/lightYellow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ClassroomDBActivity">

    <android.support.design.widget.BottomNavigationView
            android:id="@+id/ClassroomDBNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/back_menu"/>

    <ScrollView android:layout_marginTop="8dp"
                android:paddingTop="50sp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scrollView"
                android:layout_alignParentTop="true"
                app:layout_constraintTop_toBottomOf="@+id/ClassroomDBNav"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/buildingName"
                    android:text="@string/Building_Name"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buildingNameInput"/>
            <EditText
                    android:id="@+id/buildingNameInput"
                    android:hint="@string/Building_Name"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/roundededittext"
                    android:inputType="text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"/>

            <TextView
                    android:id="@+id/buildingNumTxt"
                    android:text="@string/Building_Number"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buildingNameInput"/>

            <EditText
                    android:id="@+id/buildingNumInput"
                    android:hint="@string/Building_Number"
                    android:inputType="number"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/roundededittext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buildingNumTxt"/>

            <TextView
                    android:id="@+id/latitudeTxt"
                    android:text="@string/latitude"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buildingNumInput"/>
            <EditText
                    android:id="@+id/latitudeInput"
                    android:hint="@string/latitude"
                    android:inputType="text"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/roundededittext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/latitudeTxt"/>

            <TextView
                    android:id="@+id/longitudeTxt"
                    android:text="@string/longitude"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/latitudeInput"/>
            <EditText
                    android:id="@+id/longitudeInput"
                    android:hint="@string/longitude"
                    android:inputType="text"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/roundededittext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/longitudeTxt"/>
            <TextView
                    android:id="@+id/altitudeTxt"
                    android:text="@string/altitude"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/longitudeInput"/>
            <EditText
                    android:id="@+id/altitudeInput"
                    android:hint="@string/altitude"
                    android:inputType="text"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/roundededittext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/altitudeTxt"/>
            <TextView
                    android:id="@+id/radiusTxt"
                    android:text="@string/radius"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/altitudeInput"/>
            <EditText
                    android:id="@+id/radiusInput"
                    android:hint="@string/radius"
                    android:inputType="text"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:background="@drawable/roundededittext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radiusTxt" app:layout_constraintHorizontal_bias="1.0"/>

            <!--android:enabled="false" makes sure the button isn't clickable -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                <Button
                        android:id="@+id/commitClassroomDB"
                        android:layout_margin="30dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:background="@drawable/ring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="48dp"
                        android:layout_marginBottom="64dp"
                        android:text="@string/commit"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>