<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StudentRegisterActivity">

    <android.support.design.widget.BottomNavigationView
            android:id="@+id/studentRegNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/back_menu"/>
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="50sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0">
            <TextView
                    android:id="@+id/registerStudent"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:background="@drawable/roundedbutton"
                    android:textColor="@color/white"
                    android:text="@string/register"
                    android:textSize="25sp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent">
                <TextView
                        android:id="@+id/courseIdTxt"
                        android:text="@string/courseId"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"/>
                <EditText
                        android:id="@+id/courseIdInput"
                        android:hint="@string/courseId"
                        android:inputType="number"
                        android:padding="5dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/roundededittext"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginTop="8dp"/>

                <Button
                        android:id="@+id/registerButton"
                        android:text="@string/registerStudent"
                        android:background="@drawable/ring"
                        android:layout_margin="40dp"
                        android:width="350dp"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>